--- a/app/views/_navbar.html.erb
+++ b/app/views/_navbar.html.erb
@@ -14,18 +14,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Questions</a></li>
-        <li><a href="#">Tags</a></li>
+        <!-- <li class="active"><a href="#">Questions</a></li> -->
+        <li><%= link_to 'Questions', questions_path %></li>
+        <li><a href="/tags">Tags</a></li>
       </ul>
-      <!-- <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <%= render :partial => '/signup_logic' %>  
-        <!-- Sign In Sign Up Logic -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
