--- a/app/views/_signup_logic.html.erb
+++ b/app/views/_signup_logic.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
-  <li><a href="#">Sign Out</a></li>
+  <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
 <% else %>
-  <li><a href="#">Sign In</a></li>
-  <li><a href="#">Sign Up</a></li>
+  <li><%= link_to 'Sign In', new_user_session_path %></li>
+  <li><%= link_to 'Sign Up', new_user_registration_path %></li>
 <% end %>
