--- a/app/views/questions/_list_questions.erb
+++ b/app/views/questions/_list_questions.erb
@@ -1,3 +1,3 @@
 <% @questions.each do |question| %>
-	<%= link_to question.title, question %>
+	<%= link_to question.title, question %><br>
 <% end %>
