--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,12 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.panel {
+  width:35em;
+  margin: auto;
+}
+
+input#user_remember_me {
+  margin-left:0;
+}
