--- a/app/views/_navbar.html.erb
+++ b/app/views/_navbar.html.erb
@@ -17,8 +17,10 @@
         <!-- <li class="active"><a href="#">Questions</a></li> -->
         <li><%= link_to 'Questions', questions_path %></li>
         <li><a href="/tags">Tags</a></li>
+        <li><%= link_to 'Unanswered', unanswered_question_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'New Question', new_question_path %></li>
         <%= render :partial => '/signup_logic' %>  
       </ul>
     </div><!-- /.navbar-collapse -->
