modify website background image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,13 @@
 input#user_remember_me {
   margin-left:0;
 }
+
+body {
+  background-image:url('http://wallpaperslady.com/wp-content/uploads/2014/06/Jungle-Rope-Bridge-HD-Desktop-Wallpaper.jpg');
+  background-size: cover;
+}
+
+.panel-default{
+  
+    opacity: 0.8;
+}
