add footer(empty for now)

--- a/app/views/_navbar.html.erb
+++ b/app/views/_navbar.html.erb
@@ -26,3 +26,8 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+  <div class="container">
+  </div>
+</nav>
