--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,15 +1,4 @@
 <%= form_for @question do |f| %>
-  <% if @question.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@question.errors.count, "error") %> prohibited
-      this question from being saved:</h2>
-    <ul>
-    <% @question.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -18,6 +7,11 @@
   <p>
     <%= f.label :body %><br>
     <%= f.text_area :body %>
+  </p>
+
+  <p>
+    <%= label_tag :tags %>
+    <%= text_field_tag :tags %><br>
   </p>
  
   <p>
