--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @question do |f| %>
+<%= form_for @question, url: {action: "create"} do |f| %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -10,11 +10,14 @@
   </p>
 
   <p>
-    <%= label_tag :tags %>
-    <%= text_field_tag :tags %><br>
+    <%= label_tag :tags %><br>
+    <%= text_field_tag :tags %>
   </p>
  
   <p>
     <%= f.submit %>
   </p>
 <% end %>
+
+
+
