--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,1 @@
-<h1><%=@tag.name%></h1>
-
-<% @tag.questions.each do |question| %>
-<p><%= link_to question.title, question_path(question) %></p>
-<% end %>
+<%= render partial: "show_tag" %>
