added voting on question to application

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
 
 <%= render partial: "show_question_and_responses" %>
 
-<%= render partial: 'list_answers_and_responses' %>
+<%= render partial: "list_answers_and_responses" %>
+
