--- a/app/views/tags/_show_tag.html.erb
+++ b/app/views/tags/_show_tag.html.erb
@@ -8,7 +8,7 @@
   <div class="panel-body">
    <h5> Here are al the questions listed under this tag </h5>
  </div>
-
+<center>
  <ul class="list-group">
    <% @tag.questions.each do |question| %>
    <li class="list-group-item">  
@@ -16,4 +16,5 @@
   </li>
   <% end %>
 </ul>
+</center>
 </div>
