--- a/app/views/questions/_show_question_and_responses.html.erb
+++ b/app/views/questions/_show_question_and_responses.html.erb
@@ -7,27 +7,29 @@
  </div>
  <div class="panel-body">
    <h5><%= @question.body%> </h5>
-   <div class="btn-group">
-    <button type="button" class="btn btn-primary">Place Your Vote</button>
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      <span class="caret"></span>
-      <span class="sr-only">Toggle Dropdown</span>
-    </button>
-    <ul class="dropdown-menu" role="menu">
-      <li><%= link_to "Upvote", like_question_path(@question), method: :put %></a></li>
-      <li><%= link_to "Downvote", dislike_question_path(@question), method: :put %></li>
-    </ul>
-    <%= @question.get_upvotes.count %>
-    <%= @question.get_downvotes.count %>
-  </div>
+   <center>
+    <div class="btn-group">
+      <button type="button" class="btn btn-success">
+        <%= link_to " like it", like_question_path(@question), method: :put %>  
+        <%= @question.get_upvotes.count %> 
+        <span class="glyphicon glyphicon-thumbs-up"></span>
+      </button>
+      <button type="button" class="btn btn-danger">  
+        <%= @question.get_downvotes.count %> 
+        <span class="glyphicon glyphicon-thumbs-down"></span>
+        <%= link_to "Dislike", dislike_question_path(@question), method: :put %>
+      </button>
+    </div>
+  </center>
 </div>
 <div>
-<ul class="list-group">
- <% @question.responses.each do |response| %>
- <li class="list-group-item">  
-  <%= response.body  %>
-</li>
-<% end %>
+  <ul class="list-group">
+   <% @question.responses.each do |response| %>
+   <li class="list-group-item">  
+    <%= response.body  %>
+  </li>
+  <% end %>
 </ul>
 </div>
+
 
