--- a/app/views/tags/_list_tags.html.erb
+++ b/app/views/tags/_list_tags.html.erb
@@ -4,7 +4,7 @@
   <div class="panel-body">
     <p>Here is the list of all the tags currently in use!</p>
   </div>
-
+<center>
   <ul class="list-group">
     <% @tags.each do |tag| %>
     <li class="list-group-item">
@@ -12,4 +12,5 @@
     </li>
     <% end %>
   </ul>
+</center>
 </div>
