--- a/app/views/questions/_show_question_and_responses.html.erb
+++ b/app/views/questions/_show_question_and_responses.html.erb
@@ -1,35 +1,45 @@
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">
-    <h3>
-     <%= @question.title%>
-   </h3>
- </div>
- <div class="panel-body">
-   <h5><%= @question.body%> </h5>
-   <center>
-    <div class="btn-group">
-      <button type="button" class="btn btn-success">
-        <%= link_to " like it", like_question_path(@question), method: :put %>  
-        <%= @question.get_upvotes.count %> 
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-      </button>
-      <button type="button" class="btn btn-danger">  
-        <%= @question.get_downvotes.count %> 
-        <span class="glyphicon glyphicon-thumbs-down"></span>
-        <%= link_to "Dislike", dislike_question_path(@question), method: :put %>
-      </button>
-    </div>
-  </center>
-</div>
+    <h3><%= @question.title%></h3>
+  </div>
+  
+  <div class="panel-body">
+    <h5><%= @question.body%></h5>
+    <center>
+      <div class="btn-group">
+        <button type="button" class="btn btn-success">
+          <%= link_to " like it", like_question_path(@question), method: :put %>  
+          <%= @question.get_upvotes.count %> 
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+        </button>
+        <button type="button" class="btn btn-danger">  
+          <%= @question.get_downvotes.count %> 
+          <span class="glyphicon glyphicon-thumbs-down"></span>
+          <%= link_to "Dislike", dislike_question_path(@question), method: :put %>
+        </button>
+      </div>
+
+      <div class="add-response">
+       <%= form_for [@question, Response.new], :remote => true do |f| %>
+         <p>
+           <%= f.label :body, "New response" %><br/>
+           <%= f.text_area :body %>
+         </p>
+         <p><%= f.submit "Add response" %></p> 
+       <% end %>
+      </div>
+    </center>
+  </div>
+
 <div>
   <ul class="list-group">
-   <% @question.responses.each do |response| %>
-   <li class="list-group-item">  
-    <%= response.body  %>
-  </li>
-  <% end %>
-</ul>
+    <% @question.responses.each do |response| %>
+      <li class="list-group-item">  
+      <%= response.body  %>
+      </li>
+    <% end %>
+  </ul>
 </div>
 
 
