added voting on question to application/css mods

--- a/app/views/questions/_show_question_and_responses.html.erb
+++ b/app/views/questions/_show_question_and_responses.html.erb
@@ -23,13 +23,20 @@
   </center>
 </div>
 <div>
-  <ul class="list-group">
-   <% @question.responses.each do |response| %>
+  <ol class="list-group">
+   <% @question.answers.each do |answer| %>
    <li class="list-group-item">  
-    <%= response.body  %>
+    &#10097<%= answer.body  %>
   </li>
+  <ul>
+  <% answer.responses.each do |response| %>
+    <li>
+      <%= response.body %><br>
+    </li>  
   <% end %>
-</ul>
+  </ul>
+  <% end %>
+</ol>
 </div>
 
 
