--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,5 @@
+<%= render partial: "show_question_and_votes" %>
 
-<%= render partial: "show_question_and_responses" %>
+<%= render partial: "show_and_add_responses_question" %>
 
-<%= render partial: "list_answers_and_responses" %>
-
+<%= render partial: "show_and_add_answers" %>
