--- a/app/views/responses/create.js.erb
+++ b/app/views/responses/create.js.erb
@@ -1,2 +1,2 @@
-$('#list-group').append('<%= escape_javascript(render :partial => @response) %>');
+$('#responses').append('<%= escape_javascript(render :partial => @response) %>');
 $('#response_body').val('')
