css fix to partials for Q&A show page

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,5 +1,8 @@
 <%= div_for answer do %>
-  <p>
-    <%= answer.body %>
-  </p>
+
+<ol class="list-group">
+ <li class="list-group-item"> 
+  <%= answer.body %>
+</li>
 <% end %>
+</ol>
