--- a/app/views/questions/_list_answers.html.erb
+++ b/app/views/questions/_list_answers.html.erb
@@ -1,7 +1,15 @@
-<div>
-  <% @question.answers.each do |ans| %>
-    <p>
-      <%= ans.body %><br>
-    </p>
-  <% end %>
+
+<div class="panel panel-default">
+  <div>
+      <% @question.answers.each do |ans| %>
+      
+        <%= ans.body %>
+      </li>
+      <% end %>
+    </ol>
+  </div>
 </div>
+
+
+
+<!-- Default panel contents -->
