--- a/app/views/responses/_response.html.erb
+++ b/app/views/responses/_response.html.erb
@@ -1,5 +1,8 @@
 <%= div_for response do %>
-  <p>
-    <%= response.body %>
-  </p>
+
+<ol class="list-group">
+ <li class="list-group-item"> 
+  <%= response.body %>
+</li>
 <% end %>
+</ol>
